The order of total numbers

--- a/templates/personnel/statistics.html.twig
+++ b/templates/personnel/statistics.html.twig
@@ -219,6 +219,7 @@
             pagingType: "full_numbers",
             pageLength: 10,
             lengthMenu: [10, 25, 50, 100],
+            order: [[1,'desc']] // Sort by Publications Count
         });
 
         // 📊 Pie Chart - Publication Types
